syntax = "proto3";

package auth;

service Auth {
  rpc VerifyToken(Args) returns (Customer) {}
}

message Args {
  string from = 1;
  string authToken = 2;
}

message Customer {
  int32 id = 1;
  string authToken = 2;
}
