syntax = "proto3";

package trace;

service Tracer {
  rpc Track(Trace) returns (Reply);
}

message Trace {
  string traceId = 1;
  string type = 2;
  string from = 3;
  string to = 4;
  string timestamp = 5;
  string duration = 6;
  string funcCall = 7;
}

message Reply {}
